--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
-spring.application.name=online-shopping-app
+
+# SQL-Server
+spring.datasource.url=jdbc:mysql://localhost:3306/online_shopping
+spring.datasource.username=root
+spring.datasource.password=imran
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
