Add Products and Category

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,6 @@
 # SQL-Server
 spring.datasource.url=jdbc:mysql://localhost:3306/online_shopping
 spring.datasource.username=root
-spring.datasource.password=imran
+spring.datasource.password=test
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
