--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,6 @@
 
-# SQL-Server
 spring.datasource.url=jdbc:mysql://localhost:3306/online_shopping
 spring.datasource.username=root
-spring.datasource.password=test
+spring.datasource.password=shkoder2023
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
