--- a/pom.xml
+++ b/pom.xml
@@ -31,10 +31,10 @@
             <version>8.0.29</version>
         </dependency>
 
-<!--        		<dependency>-->
-<!--        			<groupId>org.springframework.boot</groupId>-->
-<!--        			<artifactId>spring-boot-starter-security</artifactId>-->
-<!--        		</dependency>-->
+        		<dependency>
+        			<groupId>org.springframework.boot</groupId>
+        			<artifactId>spring-boot-starter-security</artifactId>
+        		</dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -53,22 +53,22 @@
             <scope>test</scope>
         </dependency>
 
-<!--                <dependency>-->
-<!--                    <groupId>org.springframework.security</groupId>-->
-<!--                    <artifactId>spring-security-test</artifactId>-->
-<!--                    <scope>test</scope>-->
-<!--                </dependency>-->
+                <dependency>
+                    <groupId>org.springframework.security</groupId>
+                    <artifactId>spring-security-test</artifactId>
+                    <scope>test</scope>
+                </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-thymeleaf</artifactId>
         </dependency>
 
-<!--                <dependency>-->
-<!--                    <groupId>org.springframework.security</groupId>-->
-<!--                    <artifactId>spring-security-test</artifactId>-->
-<!--                    <scope>test</scope>-->
-<!--                </dependency>-->
+                <dependency>
+                    <groupId>org.springframework.security</groupId>
+                    <artifactId>spring-security-test</artifactId>
+                    <scope>test</scope>
+                </dependency>
 
     </dependencies>
 
